<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:background="@drawable/border"
    tools:context=".AlarmFragment">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/clock"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/fragmentText"
            android:id="@+id/fragmentText"
            android:layout_marginStart="10dp"
            android:textSize="35sp"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/switch_button"
            android:layout_alignParentTop="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/delete_fragment"
        android:layout_below="@+id/clock">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete"
            android:text="@string/delete"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            />

        <Button
            android:id="@+id/details"

            android:minWidth="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_details"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/alarmoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_toStartOf="@+id/delete"
            android:layout_toEndOf="@+id/details"
            android:text="@string/turnoff" />

    </RelativeLayout>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/extra_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_fragment"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        app:ael_duration="250"
        app:ael_expanded="false"
        app:ael_interpolator="accelerate"
        app:ael_orientation="vertical">

        <RelativeLayout
            android:id="@+id/repeat_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <RelativeLayout
                android:id="@+id/repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp">

                <TextView
                    android:id="@+id/repeat_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/repeat" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/weeks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/repeat"
                >

                <LinearLayout
                    android:id="@+id/weekday_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <Button
                        android:id="@+id/mon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="60dp"
                        android:minHeight="50dp"
                        android:text="@string/monday"
                        android:layout_margin="2dp"
                        />

                    <Button
                        android:id="@+id/tue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="60dp"
                        android:minHeight="50dp"
                        android:text="@string/tuesday"
                        android:layout_margin="2dp"/>

                    <Button
                        android:id="@+id/wed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="60dp"
                        android:minHeight="50dp"
                        android:text="@string/wednesday"
                        android:layout_margin="2dp"
                        />

                    <Button
                        android:id="@+id/thu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="60dp"
                        android:minHeight="50dp"
                        android:text="@string/thursday"
                        android:layout_margin="2dp"
                        />

                    <Button
                        android:id="@+id/fri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="60dp"
                        android:minHeight="50dp"
                        android:text="@string/friday"
                        android:layout_margin="2dp"
                        />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/weekday_layout"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/sat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="60dp"
                        android:minHeight="50dp"
                        android:text="@string/saturday"
                        android:layout_margin="2dp"/>

                    <Button
                        android:id="@+id/sun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="60dp"
                        android:minHeight="50dp"
                        android:text="@string/sunday"
                        android:layout_margin="2dp"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weeks"
                android:layout_marginBottom="5dp"
                android:padding="0dp">

                <Spinner
                    android:id="@+id/ringtone"
                    android:spinnerMode="dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/ringtone"
                    android:layout_margin="2dp"/>

                <CheckBox
                    android:id="@+id/vibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/vibrate"
                    android:layout_marginRight="10dp"/>


            </RelativeLayout>


        </RelativeLayout>


    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>



</RelativeLayout>